--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "../www",
   "dependencies": {
+    "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-cloud-vision-api": "^0.3.0",
