--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "../www",
+  "homepage": "../",
   "dependencies": {
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp -a ./build/. ../www/",
+    "build": "react-scripts build && cp -a ./build/.. ../",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
